--- a/package.json
+++ b/package.json
@@ -49,5 +49,11 @@
     "globals": "^16.3.0",
     "tw-animate-css": "^1.3.8",
     "vite": "^7.1.2"
+  },
+  "overrides": {
+    "@emoji-mart/react": {
+      "react": "19.1.1",
+      "react-dom": "19.1.1"
+    }
   }
 }
