--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emoji-mart": "^5.6.0",
+    "laravel-echo": "^2.2.4",
     "lucide-react": "^0.543.0",
     "next-themes": "^0.4.6",
+    "pusher-js": "^8.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
